include_directories(${CMAKE_SOURCE_DIR}/third_party/googletest/googletest/include/)
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/third_party/)

add_executable(t1 t1.cpp)
target_link_libraries(t1 gtest gtest_main memort_pool)
add_executable(t2 t2.cpp)
target_link_libraries(t2 gtest gtest_main memort_pool)
add_executable(t3 t3.cpp)
target_link_libraries(t3 memort_pool)
add_executable(t4 t4.cpp)
target_link_libraries(t4 memort_pool)